fix: Increase width of settings titles
Widen out settings titles, shrinking the size of the enum buttons a bit. Previous settings_enum.css had a specific width which didn't fit the container quite right, removing it allows it to fill out the container.

--- a/styles/settings/settings_enum.css
+++ b/styles/settings/settings_enum.css
@@ -8,7 +8,7 @@ ChaosSettingsEnum {
 
 ChaosSettingsEnum #TitleContainer {
 	vertical-align: middle;
-	width: 25%;
+	width: 35%;
 	margin-right: 10px;
 }
 
@@ -20,7 +20,6 @@ ChaosSettingsEnum #title {
 ChaosSettingsEnum #values {
 	flow-children: right;
 	height: 80%;
-	width: 65%;
 	vertical-align: middle;
 }
 
