--- a/styles/settings/settings_enum_dropdown.css
+++ b/styles/settings/settings_enum_dropdown.css
@@ -8,12 +8,12 @@ ChaosSettingsEnumDropDown {
 
 #InputContainer {
 	vertical-align: middle;
-	width: 65%;
+	width: 100%;
 	flow-children: right;
 }
 
 #TitleContainer {
-	width: 25%;
+	width: 35%;
 	vertical-align: middle;
 	margin-right: 10px;
 }
