--- a/styles/settings/settings_slider.css
+++ b/styles/settings/settings_slider.css
@@ -13,7 +13,7 @@ ChaosSettingsSlider {
 }
 
 #TitleContainer {
-	width: 25%;
+	width: 35%;
 	vertical-align: middle;
 	margin-right: 10px;
 }
