--- a/styles/settings/settings_toggle.css
+++ b/styles/settings/settings_toggle.css
@@ -7,7 +7,7 @@ ChaosSettingsToggle {
 
 ChaosSettingsToggle #TitleContainer {
 	vertical-align: middle;
-	width: 30%;
+	width: 35%;
 	padding-right: 50px;
 }
 
